# ev-charger-simulator

./: .gitignore  .markdownlint.json  CHANGELOG.md  DENO_CORE_INTEGRATION.md  GITHUB_ACTIONS_SETUP_COMPLETE.md  GITHUB_RELEASE_v0.8.2.md  PERSISTENCE.md  PRESET_SCRIPT_FIX_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_RELEASE.md  README.md  README_EXTENDED.md  RELEASE_COMPLETE.md  SCRIPT_ENGINE_LEARNINGS.md  SCRIPT_ENGINE_STATUS.md  SCRIPT_ENGINE_TEST.md  THEME_TEST.md  WHITSCREEN_FINAL_FIX.md  fix-whitscreen.ps1  index.html  package-lock.json  package.json  release.ps1  requirements.md  setup-icons.ps1  test-config-persistence.ps1  test-whitscreen-fix.ps1  tsconfig.json  vite.config.backup.ts  vite.config.simple.ts  vite.config.ts
.github/workflows/: README.md  ci.yml  release.yml
config/: chargers.json
docs/: .gitignore  CONFIG_LOCATION.md  OCPP_IMPLEMENTATION.md  README.md  SCRIPT_API.md
docs/fixes/: CONFIG_PERSISTENCE_FIX.md  DEBUG_WHITSCREEN.md  PRESET_SCRIPT_FIX.md  TEST_PRESET_SCRIPT.md  THEME_SWITCHING.md  TIME_FORMAT_FIX.md  WHITSCREEN_FIX.md  WHITSCREEN_SOLUTION.md
docs/guides/: DOCS_INDEX.md  DOCS_REORGANIZATION.md  DOCS_STRUCTURE_OPTIMIZATION.md  FEATURES.md  GITHUB_ACTIONS_GUIDE.md  SETUP.md  (+5 more)
scripts/: basic_test.js  fast_charging.js  fault_test.js  normal_charging.js
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: charger.rs  commands.rs  config_loader.rs  main.rs  manager.rs  ocpp_client.rs  ocpp_messages.rs  protocol.rs  script_engine.rs  state.rs
(+9 files in other folders)
